# swift-lto-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Example/: CMakeLists.txt  Package.swift  RxSwiftExample.swift  SwiftNumericsExample.swift  SwiftStdlibExample.swift  SwiftSyntaxExample.swift  SwiftyJSONExample.swift
Example/Sources/SwiftyJSONExample/: main.swift
cmake/modules/: SwiftLTOSupport.cmake  SwiftSupport.cmake
cmake/toolchains/: Linux-x86_64.cmake  macOS-x86_64.cmake
lib/: Benchmark.swift  BenchmarkResult.swift  CMakeLists.txt
utils/: build-all.py  build-script.sh  gen-table.swift
utils/Tools/: Package.swift
utils/Tools/Sources/Tool/: BenchmarkResult.swift  Ninja.swift  Statistics.swift  Variant.swift  main.swift
utils/Tools/Sources/tablegen/: Statistics.swift
